--- a/www/css/main.css
+++ b/www/css/main.css
@@ -372,7 +372,7 @@ section.tipp-login-page > .inner > p { font-size: 14px; margin-bottom: 10px; lin
 .tipp-radio-select > input { visibility: hidden; position: absolute; top: 100%; left: 0; }
 .tipp-radio-select > label { cursor: pointer; text-align: center; position: relative; display: block; width: 100%; border-left: 1px solid rgba(0,0,0,0.05); padding: 15px 15px 15px 15px; background-color: rgba(255,255,255,0); }
 .tipp-radio-select > label:first-of-type { border-left: none; }
-.tipp-radio-select > input:checked + label { background-color: #f4f4f4; }
+.tipp-radio-select > input:checked + label { background-color: #e4e4e4; }
 .tipp-radio-select > input:checked + label { border-left-color: transparent; }
 
 /* Search Suggestions */
